force-app/main/default/objects/RESTSetting__mdt/RESTSetting__mdt.object-meta.xml
<CustomObject>
    <label>RESTSetting</label>
    <pluralLabel>RESTSettings</pluralLabel>
</CustomObject>