force-app/main/default/objects/RESTSetting__mdt/fields/setEndpoint__c.field-meta.xml
<CustomField>
    <fullName>setEndpoint__c</fullName>
    <label>setEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>