force-app/main/default/objects/RESTSetting__mdt/fields/setHeaderApp__c.field-meta.xml
<CustomField>
    <fullName>setHeaderApp__c</fullName>
    <label>setHeaderApp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>