force-app/main/default/objects/RESTSetting__mdt/fields/setHeaderType__c.field-meta.xml
<CustomField>
    <fullName>setHeaderType__c</fullName>
    <label>setHeaderType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>