force-app/main/default/objects/RESTSetting__mdt/fields/setMethod__c.field-meta.xml
<CustomField>
    <fullName>setMethod__c</fullName>
    <label>setMethod</label>
    <length>50</length>
    <type>Text</type>
</CustomField>